<?xml version="1.0" encoding="utf-8"?>
<merge
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <com.mounacheikhna.nearby.ui.BetterViewAnimator
            android:id="@+id/venues_animator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out"
            >
        <RelativeLayout
                android:id="@+id/venues_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="48dp"
                >
            <ImageView
                    android:id="@+id/venues_loading_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"

                    android:scaleType="center"
                    android:clickable="true"
                    />

            <TextView
                    android:id="@+id/venues_loading_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/venues_loading_image"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/loading_message"
                    />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/venues_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="48dp"
                >
            <ImageView
                    android:id="@+id/venues_error_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/venues_error_image"
                    android:gravity="center_horizontal"
                    android:text="@string/error_title"
                    android:textSize="34sp"
                    android:textColor="?android:attr/textColorPrimary"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/venues_error_image"
                    android:gravity="center_horizontal"
                    android:text="@string/error_message"
                    />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/venues_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="48dp"
                >
            <ImageView
                    android:id="@+id/venues_empty_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/venues_empty_image"
                    android:gravity="center_horizontal"
                    android:text="@string/empty_title"
                    android:textSize="34sp"
                    android:textColor="?android:attr/textColorPrimary"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/venues_empty_image"
                    android:gravity="center_horizontal"
                    android:text="@string/empty_message"
                    />
        </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/venues_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
    </com.mounacheikhna.nearby.ui.BetterViewAnimator>
</merge>
