<?xml version="1.0" encoding="utf-8"?>

<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:rowCount="7"
        android:useDefaultMargins="false"
        android:background="@android:color/transparent">

    <TextView
            android:id="@+id/venue_description"
            android:layout_marginTop="16dp"
            android:layout_columnSpan="3"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:textColorLink="@color/accent"
            tools:text="Go visit this nice place!"
            style="@style/Widget.Nearby.VenueDescription"/>

    <LinearLayout
            android:id="@+id/venue_options"
            android:layout_columnSpan="3"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="32dp"
            android:paddingEnd="@dimen/padding_normal">

        <Button
                android:id="@+id/evaluate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_evaluate"
                android:text="@string/evaluate"
                style="@style/Widget.Nearby.VenueOption"/>

        <Button
                android:id="@+id/check_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_check_in"
                android:text="@string/check_in"
                style="@style/Widget.Nearby.VenueOption"/>

        <Button
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share"
                android:text="@string/share"
                style="@style/Widget.Nearby.VenueOption"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/venue_phone_number_container"
            android:layout_columnSpan="3"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/padding_normal"
            android:layout_marginTop="32dp"
            android:paddingEnd="@dimen/padding_normal"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call"/>

        <TextView
                android:id="@+id/venue_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:textSize="16sp"
                tools:text="07 61 23 41 30"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/venue_hours_container"
            android:layout_columnSpan="3"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/padding_normal"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hours"/>

        <TextView
                android:id="@+id/venue_hours"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:textSize="16sp"
                tools:text="Monday - Friday : 08:00 - 17:00"/>

    </LinearLayout>

</GridLayout>
